test/binCases/errors/parse/webpack.config.js
module.exports = {
	context: __dirname,
	entry: "./index"
};
